# bifrost

./: .bifrost.yaml  .dockerignore  .env.example  .gitignore  .golangci.yml  AGENTS.md  BDD_RED_PHASE_TESTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECTOR_UPDATE_PLAN.md  README.md  SECURITY.md  TEST_FILES_MANIFEST.md  docker-compose.yml  go.work  go.work.sum  orchestrator-prd-v2.md  orchestrator-prd-v3.md  oxlint.config.ts  package-lock.json  package.json  prd-lvl3-agent-definition-v4.md  prettier.config.mjs  task-source-prd-v2.md  task-source-prd.md  tsconfig.base.json  tsconfig.json
claude-orchestrator/: CLAUDE.md  agent.py  conftest.py  dispatcher.py  pyproject.toml  test_agent_integration.py  test_completion_note.py  test_completion_note_e2e.py
claude-orchestrator/agents/: loader.py
claude-orchestrator/claude_orchestrator/: __init__.py  _rune_types.py  domain.py  hook_runner.py  hooks.py  orchestrator.py  reporting.py  sdk_runner.py
claude-orchestrator/claude_orchestrator/agent_catalog/: __init__.py  (+3 more)
claude-orchestrator/scripts/: gen_rune_types.py
orchestrator/: .bifrost.yaml.example  README.md  last-statusline  oxlint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  publish.js  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.test.json  vite.base.ts  vitest.config.ts  vitest.setup.ts
orchestrator/atif/: atif-1-7.md
orchestrator/docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CREATING_AN_AGENT.md  PATTERNS.md  glossary.md
orchestrator/scripts/: agent.py  dispatcher.py
(+756 files in other folders)
