[project]
name = "orchestrator-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "orchestrator",
    "interface-engine",
    "interface-tasks",
    "engine-claude-code",
    "tasks-bifrost",
    "claude-agent-sdk",
    "requests",
    "pyyaml",
    "watchdog",
    "anyio",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
orchestrator = { workspace = true }
interface-engine = { workspace = true }
interface-tasks = { workspace = true }
engine-claude-code = { workspace = true }
tasks-bifrost = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "ruff>=0.15.10",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
